# maknoon-trezor-core-rs

./: .gitignore  Cargo.toml  Makefile  NOTICE  README.md  SECURITY.md  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
android/: build-aar.sh  build.gradle.kts  gradle.properties  settings.gradle.kts
ios/: build-xcframework.sh
trezor-core/: Cargo.toml  build.rs
trezor-core/proto/: VENDORED_FROM.txt
trezor-core/src/: bip32.rs  client.rs  error.rs  lib.rs  proto.rs  transport.rs  types.rs
trezor-core/src/chains/: bitcoin.rs  ethereum.rs  mod.rs  solana.rs  tron.rs
trezor-core/src/thp/: aead.rs  channel.rs  connection.rs  cpace.rs  elligator2.rs  framing.rs  mod.rs  noise.rs  pairing.rs  session.rs
trezor-core/tests/: skeleton.rs
