[package]
name = "trezor-core"
version = "0.1.0"
description = "Trezor hardware-wallet signing client (THP v2 over BLE) with UniFFI bindings for Swift and Kotlin"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
# `cdylib` for iOS/Android dynamic loading via UniFFI bindings.
# `staticlib` for iOS xcframework static linking.
# `rlib` (lib) so the same crate can be consumed by Rust tests.
name = "trezor_core"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
# Tron (TRX / TRC-20) gained Trezor firmware support in the March
# 2026 update; it is the newest of the four chains. The chain impl
# module is gated so it can be dropped from a build, but it ships
# on by default for full parity with the ledger crates.
default = ["tron"]
tron = []

[dependencies]
async-trait.workspace = true
base64.workspace = true
thiserror.workspace = true
hex.workspace = true
prost.workspace = true
bitcoin.workspace = true
x25519-dalek.workspace = true
aes-gcm.workspace = true
sha2.workspace = true
hmac.workspace = true
getrandom.workspace = true

# UniFFI's `tokio` feature uses tokio for the futures runtime hook
# inside generated async-callback glue. `cli` is needed to compile
# the uniffi-bindgen wrapper binary (src/bin/uniffi-bindgen.rs).
uniffi = { workspace = true, features = ["tokio", "cli"] }
tokio = { workspace = true, features = ["sync", "rt", "macros"] }

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "macros", "test-util"] }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
prost-build.workspace = true
protox.workspace = true
